Replace deprecated primitive-wrapper constructors with valueOf factories